--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "version": 2,
   "scope": "aksouda",
-  "alias": ["https://recruto.ro"],
+  "alias": ["recruto.ro"],
   "env": {
     "MONGODB_URI": "mongodb+srv://hamid:hamid12345@cluster0.maldw.mongodb.net/big5?retryWrites=true&w=majority",
     "MONGODB_COLLECTION": "results",
