--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "vue-amplitude": "1.0.3",
     "vue-apexcharts": "1.6.0",
     "vue-confetti": "2.2.1",
+    "vue-cookieconsent-component": "1.2.0",
     "vue-template-compiler": "2.6.12"
   },
   "devDependencies": {
@@ -56,6 +57,7 @@
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-promise": "4.3.1",
     "eslint-plugin-standard": "4.1.0",
+    "vue-cookieconsent-component": "1.2.0",
     "eslint-plugin-vue": "7.6.0"
   }
 }
